wip: linux packages

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ benchmark.txt
 !/.travis.yml
 !/.promu.yml
 !/.golangci.yml
+!/.goreleaser.yml
 /documentation/examples/remote_storage/remote_storage_adapter/remote_storage_adapter
 /documentation/examples/remote_storage/example_write_adapter/example_write_adapter
 
@@ -31,3 +32,5 @@ npm_licenses.tar.bz2
 
 # Ignore parser debug
 y.output
+
+dist/
