--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Install Deb Package
         run: |
-          sudo apt-get install -y -f dist/prometheus_linux_amd64.deb
+          sudo apt-get install -y -f ./dist/prometheus_linux_amd64.deb
           sudo systemctl start prometheus
 
       - name: Test Install
